# infnoise

./: .gitmodules
software/: CMakeLists.txt  Makefile  Makefile.darwin  Makefile.freebsd  Makefile.linux  Makefile.macos  infnoise.c  infnoise.h  libinfnoise.c  libinfnoise.h  libinfnoise_private.h
software/Keccak/: CMakeLists.txt
software/blake2x_sse/: blake2.h
software/cli/: CMakeLists.txt
software/libinfnoise/: CMakeLists.txt  libinfnoise.version
tests/results/blake3/: devrandom-1-2500K-dieharder.txt  devrandom-1-2500K-ent.txt  devrandom-1-2500K-rngtest.txt  devrandom-10-2500K-dieharder.txt  devrandom-10-2500K-ent.txt  devrandom-10-2500K-rngtest.txt  devrandom-100-2500K-dieharder.txt  devrandom-100-2500K-ent.txt  devrandom-100-2500K-rngtest.txt  devrandom-1000-2500K-dieharder.txt  devrandom-1000-2500K-ent.txt  devrandom-1000-2500K-rngtest.txt  devrandom-10000-2500K-dieharder.txt  devrandom-10000-2500K-ent.txt  devrandom-10000-2500K-rngtest.txt  raw-2500K-dieharder.txt  raw-2500K-ent.txt  raw-2500K-rngtest.txt  whitened-1-2500K-dieharder.txt  whitened-1-2500K-ent.txt  whitened-1-2500K-rngtest.txt  whitened-10-2500K-dieharder.txt  whitened-10-2500K-ent.txt  whitened-10-2500K-rngtest.txt  whitened-100-2500K-dieharder.txt  whitened-100-2500K-ent.txt  whitened-100-2500K-rngtest.txt  whitened-1000-2500K-dieharder.txt  whitened-1000-2500K-ent.txt  whitened-1000-2500K-rngtest.txt  whitened-10000-2500K-dieharder.txt  whitened-10000-2500K-ent.txt  whitened-10000-2500K-rngtest.txt
